// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls fetchGroupTopic on componentDidMount 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
          >
            <View
              collapsable={false}
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                >
                  Public Groups & Posts
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
        >
          <View
            collapsable={false}
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View>
                        <ActivityIndicator
                          color="#818A88"
                          size="small"
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </View>
</View>
`;

exports[`renders correctly if currentUserHasMemberships 1`] = `
<SafeAreaProvider>
  <TRenderEngineProvider
    baseStyle={
      {
        "fontSize": 14,
      }
    }
    classesStyles={{}}
    customHTMLElementModels={{}}
    emSize={14}
    enableCSSInlineProcessing={true}
    enableUserAgentStyles={true}
    fallbackFonts={
      {
        "monospace": "Menlo",
        "sans-serif": "system",
        "serif": "Times New Roman",
      }
    }
    htmlParserOptions={
      {
        "decodeEntities": true,
      }
    }
    ignoredDomTags={[]}
    ignoredStyles={[]}
    systemFonts={
      [
        "San Francisco",
        "Arial",
        "ArialHebrew",
        "Avenir",
        "Baskerville",
        "Bodoni 72",
        "Bradley Hand",
        "Chalkboard SE",
        "Cochin",
        "Copperplate",
        "Courier",
        "Courier New",
        "Damascus",
        "Didot",
        "Futura",
        "Geeza Pro",
        "Georgia",
        "Gill Sans",
        "Helvetica",
        "Helvetica Neue",
        "Hiragino Sans",
        "Hoefler Text",
        "Iowan Old Style",
        "Kailasa",
        "Khmer Sangam MN",
        "Marker Felt",
        "Menlo",
        "Mishafi",
        "Noteworthy",
        "Optima",
        "Palatino",
        "Papyrus",
        "Savoye LET",
        "Symbol",
        "Thonburi",
        "Times New Roman",
        "Trebuchet MS",
        "Verdana",
        "Zapf Dingbats",
        "Zapfino",
      ]
    }
    tagsStyles={{}}
  >
    <Provider
      store={
        {
          "dispatch": [MockFunction],
          "getState": [MockFunction],
          "subscribe": [MockFunction],
        }
      }
    >
      <HyloHTMLConfigProvider>
        <ForwardRef(NavigationContainerInner)>
          <Feed
            currentUser={
              {
                "id": "2",
              }
            }
            currentUserHasMemberships={true}
            editPost={[Function]}
            goToGroup={[Function]}
            group={
              {
                "id": "1",
              }
            }
            navigation={{}}
            newPost={[Function]}
            route={{}}
            showPost={[Function]}
            topicName="amazing"
          />
        </ForwardRef(NavigationContainerInner)>
      </HyloHTMLConfigProvider>
    </Provider>
  </TRenderEngineProvider>
</SafeAreaProvider>
`;

exports[`renders correctly if currentUserHasMemberships is false 1`] = `
<SafeAreaProvider>
  <TRenderEngineProvider
    baseStyle={
      {
        "fontSize": 14,
      }
    }
    classesStyles={{}}
    customHTMLElementModels={{}}
    emSize={14}
    enableCSSInlineProcessing={true}
    enableUserAgentStyles={true}
    fallbackFonts={
      {
        "monospace": "Menlo",
        "sans-serif": "system",
        "serif": "Times New Roman",
      }
    }
    htmlParserOptions={
      {
        "decodeEntities": true,
      }
    }
    ignoredDomTags={[]}
    ignoredStyles={[]}
    systemFonts={
      [
        "San Francisco",
        "Arial",
        "ArialHebrew",
        "Avenir",
        "Baskerville",
        "Bodoni 72",
        "Bradley Hand",
        "Chalkboard SE",
        "Cochin",
        "Copperplate",
        "Courier",
        "Courier New",
        "Damascus",
        "Didot",
        "Futura",
        "Geeza Pro",
        "Georgia",
        "Gill Sans",
        "Helvetica",
        "Helvetica Neue",
        "Hiragino Sans",
        "Hoefler Text",
        "Iowan Old Style",
        "Kailasa",
        "Khmer Sangam MN",
        "Marker Felt",
        "Menlo",
        "Mishafi",
        "Noteworthy",
        "Optima",
        "Palatino",
        "Papyrus",
        "Savoye LET",
        "Symbol",
        "Thonburi",
        "Times New Roman",
        "Trebuchet MS",
        "Verdana",
        "Zapf Dingbats",
        "Zapfino",
      ]
    }
    tagsStyles={{}}
  >
    <Provider
      store={
        {
          "dispatch": [MockFunction],
          "getState": [MockFunction],
          "subscribe": [MockFunction],
        }
      }
    >
      <HyloHTMLConfigProvider>
        <ForwardRef(NavigationContainerInner)>
          <Feed
            currentUser={
              {
                "id": "2",
              }
            }
            currentUserHasMemberships={false}
            editPost={[Function]}
            goToGroup={[Function]}
            group={
              {
                "id": "1",
              }
            }
            navigation={{}}
            newPost={[Function]}
            showPost={[Function]}
            topicName="amazing"
          />
        </ForwardRef(NavigationContainerInner)>
      </HyloHTMLConfigProvider>
    </Provider>
  </TRenderEngineProvider>
</SafeAreaProvider>
`;
